# 3_Django

./: README.md  docker-compose.yaml  pyproject.toml
app/: settings.py  urls.py
dog_app/: apps.py  models.py  serializers.py  urls.py  views.py
dog_app/migrations/: 0001_initial.py
tests/: conftest.py  test_breed.py  test_dog.py
utils/: choices.py
